created cheese slice and block of cheese

--- a/src/main/resources/lang/bunnomod/en_US/item.lang
+++ b/src/main/resources/lang/bunnomod/en_US/item.lang
@@ -1,2 +1,4 @@
 item.bunnomod.brownCoal.name=Brown Coal
 item.bunnomod.brownCoal.desc=Least efficient coal-type
+item.bunnomod.cheeseSlice.name=A slice of cheese
+item.bunnomod.cheeseSlice.desc=Finest cheese
