added separate recipes class and fixed the appearance of block of cheese, but not fully

--- a/src/main/resources/lang/bunnomod/en_US/tile.lang
+++ b/src/main/resources/lang/bunnomod/en_US/tile.lang
@@ -6,3 +6,6 @@ tile.bunnomod.brownCoal.limestone.name=Limestone Brown Coal
 tile.bunnomod.brownCoal.limestone.desc=Like normal coal, but brown
 tile.bunnomod.brownCoal.granite.name=Granite Brown Coal
 tile.bunnomod.brownCoal.granite.desc=Like normal coal, but brown
+
+tile.bunnomod.blockOfCheese.name=Block of cheese
+tile.bunnomod.blockOfCheese.desc=Finest cheese in a block form
