added item knife and made cheese block drop slices of cheese when right-clicked with knife

--- a/src/main/resources/lang/bunnomod/en_US/item.lang
+++ b/src/main/resources/lang/bunnomod/en_US/item.lang
@@ -3,3 +3,6 @@ item.bunnomod.brownCoal.desc=Least efficient coal-type
 
 item.bunnomod.cheeseSlice.name=A slice of cheese
 item.bunnomod.cheeseSlice.desc=Finest cheese
+
+item.bunnomod.knife.name=Knife
+item.bunnomod.knife.desc=Sharp indeed
