--- a/src/main/resources/lang/bunnomod/en_US/item.lang
+++ b/src/main/resources/lang/bunnomod/en_US/item.lang
@@ -6,3 +6,6 @@ item.bunnomod.cheeseSlice.desc=Finest cheese
 
 item.bunnomod.knife.name=Knife
 item.bunnomod.knife.desc=Sharp indeed
+
+item.bunnomod.salt.name=Salt
+item.bunnomod.salt.desc=Don't be salty
