--- a/src/main/resources/lang/bunnomod/en_US/tile.lang
+++ b/src/main/resources/lang/bunnomod/en_US/tile.lang
@@ -7,5 +7,8 @@ tile.bunnomod.brownCoal.limestone.desc=Like normal coal, but brown
 tile.bunnomod.brownCoal.granite.name=Granite Brown Coal
 tile.bunnomod.brownCoal.granite.desc=Like normal coal, but brown
 
-tile.bunnomod.blockOfCheese.name=Block of cheese
+tile.bunnomod.blockOfCheese.name=Block of Cheese
 tile.bunnomod.blockOfCheese.desc=Finest cheese in a block form
+
+tile.bunnomod.block.salt.name=Salt Block
+tile.bunnomod.block.salt.desc=Must be salty
