cheese making sorta working, but interacting with a cheeseblock crashes the game

--- a/src/main/resources/lang/bunnomod/en_US/item.lang
+++ b/src/main/resources/lang/bunnomod/en_US/item.lang
@@ -8,4 +8,4 @@ item.bunnomod.knife.name=Knife
 item.bunnomod.knife.desc=Sharp indeed
 
 item.bunnomod.salt.name=Salt
-item.bunnomod.salt.desc=Don't be salty
+item.bunnomod.salt.desc=Don't be salty!
