Made mod playable: Cheesemaker works as intended, cheesemaker has textures(finally), cheeseblock does not crashes the game when clicked without a knife

--- a/src/main/resources/lang/bunnomod/en_US/item.lang
+++ b/src/main/resources/lang/bunnomod/en_US/item.lang
@@ -9,3 +9,6 @@ item.bunnomod.knife.desc=Sharp indeed
 
 item.bunnomod.salt.name=Salt
 item.bunnomod.salt.desc=Don't be salty!
+
+item.bunnomod.cheeseBlock.name=Cheese Block
+item.bunnomod.cheeseBlock.desc=Block of Cheese now as an item!
