--- a/src/main/resources/lang/cheesemod/en_US/tile.lang
+++ b/src/main/resources/lang/cheesemod/en_US/tile.lang
@@ -1,11 +1,11 @@
-tile.cheesemod.brownCoal.stone.name=Stone Brown Coal
-tile.cheesemod.brownCoal.stone.desc=Like normal coal, but brown
-tile.cheesemod.brownCoal.basalt.name=Basalt Brown Coal
-tile.cheesemod.brownCoal.basalt.desc=Like normal coal, but brown
-tile.cheesemod.brownCoal.limestone.name=Limestone Brown Coal
-tile.cheesemod.brownCoal.limestone.desc=Like normal coal, but brown
-tile.cheesemod.brownCoal.granite.name=Granite Brown Coal
-tile.cheesemod.brownCoal.granite.desc=Like normal coal, but brown
+tile.cheesemod.ore.salt.stone.name=Stone Salt Ore
+tile.cheesemod.ore.salt.stone.desc=Salt in one of it's natural forms
+tile.cheesemod.ore.salt.basalt.name=Basalt Salt Ore
+tile.cheesemod.ore.salt.basalt.desc=Salt in one of it's natural forms
+tile.cheesemod.ore.salt.limestone.name=Limestone Salt Ore
+tile.cheesemod.ore.salt.limestone.desc=Salt in one of it's natural forms
+tile.cheesemod.ore.salt.granite.name=Granite Salt Ore
+tile.cheesemod.ore.salt.granite.desc=Salt in one of it's natural forms
 
 tile.cheesemod.blockOfCheese.name=Block of Cheese
 tile.cheesemod.blockOfCheese.desc=Finest cheese in a block form
