half working recipes

--- a/src/main/resources/lang/cheesemod/en_US/item.lang
+++ b/src/main/resources/lang/cheesemod/en_US/item.lang
@@ -9,3 +9,10 @@ item.cheesemod.salt.desc=Don't be salty!
 
 item.cheesemod.cheeseBlock.name=Cheese Block
 item.cheesemod.cheeseBlock.desc=Block of Cheese now as an item!
+
+item.cheesemod.rennet.name=Rennet
+item.cheesemod.rennet.desc=An important ingredient for making cheese
+
+item.cheesemod.cowStomach.name=Cow Stomach
+item.cheesemod.cowStomach.desc=The Stomach of a cow
+
