made bacterium drop

--- a/src/main/resources/lang/cheesemod/en_US/item.lang
+++ b/src/main/resources/lang/cheesemod/en_US/item.lang
@@ -16,3 +16,6 @@ item.cheesemod.rennet.desc=An important ingredient for making cheese
 item.cheesemod.cowStomach.name=Cow Stomach
 item.cheesemod.cowStomach.desc=The Stomach of a cow
 
+item.cheesemod.bacterium.name=Bacterium
+item.cheesemod.bacterium.desc=An important ingredient for making cheese
+
