new crafting recipes and new cheese making recipe + scallion

--- a/src/main/resources/lang/cheesemod/en_US/item.lang
+++ b/src/main/resources/lang/cheesemod/en_US/item.lang
@@ -19,3 +19,6 @@ item.cheesemod.cowStomach.desc=The Stomach of a cow
 item.cheesemod.bacterium.name=Bacterium
 item.cheesemod.bacterium.desc=An important ingredient for making cheese
 
+item.cheesemod.scallion.name=Scallion
+item.cheesemod.scallion.desc =You can eat it or make cheese with it
+
